--- a/八股/系统.md
+++ b/八股/系统.md
@@ -300,3 +300,55 @@ Linux 系统**为了解决中断处理程序执行过长和中断丢失的问题
 如果在 top 命令发现，CPU 在软中断上的使用率比较高，而且 CPU 使用率最高的进程也是软中断 ksoftirqd 的时候，这种一般可以认为系统的开销被软中断占据了。
 
 这时我们就可以分析是哪种软中断类型导致的，一般来说都是因为网络接收软中断导致的，如果是的话，可以用 sar 命令查看是哪个网卡的有大量的网络包接收，再用 tcpdump 抓网络包，做进一步分析该网络包的源头是不是非法地址，如果是就需要考虑防火墙增加规则，如果不是，则考虑硬件升级等。
+
+# 虚拟内存
+
+**操作系统会提供一种机制，将不同进程的虚拟地址和不同内存的物理地址映射起来。**
+
+如果程序要访问虚拟地址的时候，由操作系统转换成不同的物理地址，这样不同的进程运行的时候，写入的是不同的物理地址，这样就不会冲突了。
+
+于是，这里就引出了两种地址的概念：
+
+- 我们程序所使用的内存地址叫做**虚拟内存地址**（*Virtual Memory Address*）
+- 实际存在硬件里面的空间地址叫**物理内存地址**（*Physical Memory Address*）。
+
+操作系统引入了虚拟内存，进程持有的虚拟地址会通过 CPU 芯片中的内存管理单元（MMU）的映射关系，来转换变成物理地址，然后再通过物理地址访问内存，如下图所示：
+
+![img](./../img/72ab76ba697e470b8ceb14d5fc5688d9.png)
+
+主要有两种方式，分别是**内存分段和内存分页**
+
+##  内存分段
+
+程序是由若干个逻辑分段组成的，如可由代码分段、数据分段、栈段、堆段组成。**不同的段是有不同的属性的，所以就用分段（*Segmentation*）的形式把这些段分离出来。**
+
+分段机制下的虚拟地址由两部分组成，**段选择因子**和**段内偏移量**。
+
+![img](./../img/a9ed979e2ed8414f9828767592aadc21.png)
+
+段选择因子和段内偏移量：
+
+- **段选择子**就保存在段寄存器里面。段选择子里面最重要的是**段号**，用作段表的索引。**段表**里面保存的是这个**段的基地址、段的界限和特权等级**等。
+- 虚拟地址中的**段内偏移量**应该位于 0 和段界限之间，如果段内偏移量是合法的，就将段基地址加上段内偏移量得到物理内存地址。
+
+### 内存碎片
+
+但是由于每个段的长度不固定，所以多个段未必能恰好使用所有的内存空间，会产生了多个不连续的小物理内存，导致新的程序无法被装载，所以**会出现外部内存碎片**的问题。
+
+解决「外部内存碎片」的问题就是**内存交换**。但是如果内存交换的时候，交换的是一个占内存空间很大的程序，这样整个机器都会显得卡顿。
+
+## 内存分页
+
+分段的好处就是能产生连续的内存空间，但是会出现「外部内存碎片和内存交换的空间太大」的问题。
+
+要解决这些问题，那么就要想出能少出现一些内存碎片的办法。另外，当需要进行内存交换的时候，让需要交换写入或者从磁盘装载的数据更少一点，这样就可以解决问题了。这个办法，也就是**内存分页**（*Paging*）。
+
+**分页是把整个虚拟和物理内存空间切成一段段固定尺寸的大小**。这样一个连续并且尺寸固定的内存空间，我们叫**页**（*Page*）。在 Linux 下，每一页的大小为 `4KB`。
+
+虚拟地址与物理地址之间通过**页表**来映射，如下图：
+
+![img](./../img/08a8e315fedc4a858060db5cb4a654af.png)
+
+页表是存储在内存里的，**内存管理单元** （*MMU*）就做将虚拟内存地址转换成物理地址的工作。
+
+而当进程访问的虚拟地址在页表中查不到时，系统会产生一个**缺页异常**，进入系统内核空间分配物理内存、更新进程页表，最后再返回用户空间，恢复进程的运行。
