--- a/八股/系统.md
+++ b/八股/系统.md
@@ -352,3 +352,108 @@ Linux 系统**为了解决中断处理程序执行过长和中断丢失的问题
 页表是存储在内存里的，**内存管理单元** （*MMU*）就做将虚拟内存地址转换成物理地址的工作。
 
 而当进程访问的虚拟地址在页表中查不到时，系统会产生一个**缺页异常**，进入系统内核空间分配物理内存、更新进程页表，最后再返回用户空间，恢复进程的运行。
+
+如果内存空间不够，操作系统会把其他正在运行的进程中的「最近没被使用」的内存页面给释放掉，也就是暂时写在硬盘上，称为**换出**（*Swap Out*）。一旦需要的时候，再加载进来，称为**换入**（*Swap In*）。所以，一次性写入磁盘的也只有少数的一个页或者几个页，不会花太多时间，**内存交换的效率就相对比较高。**更进一步地，分页的方式使得我们在加载程序的时候，不再需要一次性都把程序加载到物理内存中。我们完全可以在进行虚拟内存和物理内存的页之间的映射之后，并不真的把页加载到物理内存里，而是**只有在程序运行中，需要用到对应虚拟内存页里面的指令和数据时，再加载到物理内存里面去。(懒加载)**
+
+在分页机制下，虚拟地址分为两部分，**页号**和**页内偏移**。页号作为页表的索引，**页表**包含物理页每页所在**物理内存的基地址**，这个基地址与页内偏移的组合就形成了物理内存地址
+
+![img](./../img/7884f4d8db4949f7a5bb4bbd0f452609.png)
+
+所以只需要虚拟页号的顺序即可，不需要考虑物理页号的顺序
+
+#### 多级页表
+
+为了解决页表空间上的缺陷（非常多的进程导致页表非常庞大）
+
+需要采用一种叫作**多级页表**（*Multi-Level Page Table*）的解决方案。
+
+##### 二级页表：
+
+![img](./../img/19296e249b2240c29f9c52be70f611d5.png)
+
+对于 64 位的系统，两级分页肯定不够了，就变成了四级目录，分别是：
+
+- 全局页目录项 PGD（*Page Global Directory*）；
+- 上层页目录项 PUD（*Page Upper Directory*）；
+- 中间页目录项 PMD（*Page Middle Directory*）；
+- 页表项 PTE（*Page Table Entry*）；
+
+![img](./../img/%E5%9B%9B%E7%BA%A7%E5%88%86%E9%A1%B5.png)
+
+### TLB
+
+多级页表虽然解决了空间上的问题，但是虚拟地址到物理地址的转换就多了几道转换的工序，这显然就降低了这俩地址转换的速度，也就是带来了时间上的开销。
+
+程序是有局部性的，即在一段时间内，整个程序的执行仅限于程序中的某一部分。相应地，执行所访问的存储空间也局限于某个内存区域。
+
+![img](./../img/edce58534d9342ff89f5261b1929c754.png)
+
+我们就可以利用这一特性，把最常访问的几个页表项存储到访问速度更快的硬件，于是计算机科学家们，就在 CPU 芯片中，加入了一个专门存放程序最常访问的页表项的 Cache，这个 Cache 就是 TLB（*Translation Lookaside Buffer*） ，通常称为页表缓存、转址旁路缓存、快表等。
+
+![img](./../img/a3cdf27646b24614a64cfc5d7ccffa35.png)
+
+在 CPU 芯片里面，封装了内存管理单元（*Memory Management Unit*）芯片，它用来完成地址转换和 TLB 的访问与交互。
+
+有了 TLB 后，那么 CPU 在寻址时，会先查 TLB，如果没找到，才会继续查常规的页表。
+
+## 段页式内存管理
+
+内存分段和内存分页组合起来在同一个系统中使用的，组合后，通常称为**段页式内存管理**。
+
+![img](./../img/f19ebd6f70f84083b0d87cc5e9dea8e3.png)
+
+段页式内存管理实现的方式：
+
+- 先将程序划分为多个有逻辑意义的段，也就是前面提到的分段机制；
+- 接着再把每个段划分为多个页，也就是对分段划分出来的连续空间，再划分固定大小的页；
+
+这样，地址结构就由**段号、段内页号和页内位移**三部分组成。
+
+用于段页式地址变换的数据结构是每一个程序一张段表，每个段又建立一张页表，段表中的地址是页表的起始地址，而页表中的地址则为某页的物理页号，如图所示：
+
+![img](./../img/8904fb89ae0c49c4b0f2f7b5a0a7b099.png)
+
+段页式地址变换中要得到物理地址须经过三次内存访问：
+
+- 第一次访问段表，得到页表起始地址；
+- 第二次访问页表，得到物理页号；
+- 第三次将物理页号与页内位移组合，得到物理地址。
+
+# Malloc 和 Free
+
+## malloc 分配内存
+
+- 方式一：通过 brk() 系统调用从堆分配内存
+- 方式二：通过 mmap() 系统调用在文件映射区域分配内存；
+
+方式一实现的方式很简单，就是通过 brk() 函数将「堆顶」指针向高地址移动，获得新的内存空间。如下图：
+
+![img](./../img/brk%E7%94%B3%E8%AF%B7.png)
+
+方式二通过 mmap() 系统调用中「私有匿名映射」的方式，在文件映射区分配一块内存，也就是从文件映射区“偷”了一块内存。如下图：
+
+![img](./../img/mmap%E7%94%B3%E8%AF%B7.png)
+
+- 如果用户分配的内存小于 128 KB，则通过 brk() 申请内存；
+- 如果用户分配的内存大于 128 KB，则通过 mmap() 申请内存；
+
+**注意：malloc 分配的是虚拟内存，如果分配后的虚拟内存没有被访问的话，虚拟内存是不会映射到物理内存的，这样就不会占用物理内存了。**
+
+只有在访问已分配的虚拟地址空间的时候，操作系统通过查找页表，发现虚拟内存对应的页没有在物理内存中，就会触发缺页中断，然后操作系统会建立虚拟内存和物理内存之间的映射关系
+
+## Free 释放内存
+
+- malloc 通过 **brk()** 方式申请的内存，free 释放内存的时候，**并不会把内存归还给操作系统，而是缓存在 malloc 的内存池中，待下次使用**；
+- malloc 通过 **mmap()** 方式申请的内存，free 释放内存的时候，**会把内存归还给操作系统，内存得到真正的释放**。
+
+## 为什么不统一分配方式
+
+**频繁通过 mmap 分配的内存话，不仅每次都会发生运行态的切换，还会发生缺页中断（在第一次访问虚拟地址后），这样会导致 CPU 消耗较大**。
+
+频繁使用 sbrk 分配内存的话，会产生很多的内存碎片，导致内存泄漏。
+
+
+
+![图片](./../img/cb6e3ce4532ff0a6bfd60fe3e52a806e.png)
+
+当执行 free() 函数时，free 会对传入进来的内存地址向左偏移 16 字节，然后从这个 16 字节的分析出当前的内存块的大小，自然就知道要释放多大的内存了。
