--- a/八股/系统.md
+++ b/八股/系统.md
@@ -457,3 +457,78 @@ Linux 系统**为了解决中断处理程序执行过长和中断丢失的问题
 ![图片](./../img/cb6e3ce4532ff0a6bfd60fe3e52a806e.png)
 
 当执行 free() 函数时，free 会对传入进来的内存地址向左偏移 16 字节，然后从这个 16 字节的分析出当前的内存块的大小，自然就知道要释放多大的内存了。
+
+# 内存满了会发生什么
+
+## 内存分配过程
+
+1. 通过 malloc 分配虚拟内存
+2. 当 CPU 写这段虚拟内存的时候，会发生缺页中断（因为没有分配物理内存），系统从用户态切换到内核态，将问题交给内核态的 Pagefault Handler 处理
+3. Pagefault Handler 观察是否有空闲的物理内存，有就直接分配，没有就进行内存回收
+   * **后台内存回收**（kswapd）：在物理内存紧张的时候，会唤醒 kswapd 内核线程来回收内存，这个回收内存的过程**异步**的，不会阻塞进程的执行。
+   * **直接内存回收**（direct reclaim）：如果后台异步回收跟不上进程内存申请的速度，就会开始直接回收，这个回收内存的过程是**同步**的，会阻塞进程的执行。
+4. 如果直接内存回收后，空闲的物理内存仍然无法满足此次物理内存的申请，那么内核就会放最后的大招了 ——**触发 OOM （Out of Memory）机制**。
+
+OOM Killer 机制会根据算法选择一个占用物理内存较高的进程，然后将其杀死，以便释放内存资源，如果物理内存依然不足，OOM Killer 会继续杀死占用物理内存较高的进程，直到释放足够的内存位置。
+
+## 可以被回收的内存
+
+主要有两类内存可以被回收，而且它们的回收方式也不同。
+
+- **文件页**（File-backed Page）：内核缓存的磁盘数据（Buffer）和内核缓存的文件数据（Cache）都叫作文件页。大部分文件页，都可以直接释放内存，以后有需要时，再从磁盘重新读取就可以了。而那些被应用程序修改过，并且暂时还没写入磁盘的数据（也就是脏页），就得先写入磁盘，然后才能进行内存释放。所以，**回收干净页的方式是直接释放内存，回收脏页的方式是先写回磁盘后再释放内存**。
+- **匿名页**（Anonymous Page）：这部分内存没有实际载体，不像文件缓存有硬盘文件这样一个载体，比如堆、栈数据等。这部分内存很可能还要再次被访问，所以不能直接释放内存，它们**回收的方式是通过 Linux 的 Swap 机制**，Swap 会把不常访问的内存先写到磁盘中，然后释放这些内存，给其他更需要的进程使用。再次访问这些内存时，重新从磁盘读入内存就可以了。
+
+文件页和匿名页的回收都是基于 LRU 算法，也就是优先回收不常访问的内存。LRU 回收算法，实际上维护着 active 和 inactive 两个双向链表，其中：
+
+- **active_list** 活跃内存页链表，这里存放的是最近被访问过（活跃）的内存页；
+- **inactive_list** 不活跃内存页链表，这里存放的是很少被访问（非活跃）的内存页；
+
+越接近链表尾部，就表示内存页越不常访问。这样，在回收内存时，系统就可以根据活跃程度，优先回收不活跃的内存。
+
+同时我们需要注意，在匿名页写入的时候，是由有磁盘和系统的操作的，这里会损耗系统的性能
+
+## 保护进程不被 OOM 杀死
+
+Linux 通过 `oom_badness()` 将给所有可以被杀死的进程打分，进程打分的依据有：
+
+- 第一，进程已经使用的物理内存页面数。
+- 第二，每个进程的 OOM 校准值 oom_score_adj。它是可以通过 `/proc/[pid]/oom_score_adj` 来配置的。我们可以在设置 -1000 到 1000 之间的任意一个数值，调整进程被 OOM Kill 的几率。
+
+$points = process_pages + oom_score_adj*totalpages/1000$ **计算出来的值越大，那么这个进程被 OOM Kill 的几率也就越大**
+
+每个进程的 oom_score_adj 默认值都为 0，所以最终得分跟进程自身消耗的内存有关，消耗的内存越大越容易被杀掉。我们可以通过调整 oom_score_adj 的数值，来改成进程的得分结果：
+
+- 如果你不想某个进程被首先杀掉，那你可以调整该进程的 oom_score_adj，从而改变这个进程的得分结果，降低该进程被 OOM 杀死的概率。
+- 如果你想某个进程无论如何都不能被杀掉，那你可以将 oom_score_adj 配置为 -1000。
+
+# 避免预读失效和缓存污染
+
+## LRU 存在的问题
+
+- **「预读失效」导致缓存命中率下降**
+- **「缓存污染」导致缓存命中率下降**
+
+MySQL 和 Linux 操作系统是通过**改进 LRU 算法**来避免「预读失效和缓存污染」而导致缓存命中率下降的问题。
+
+## Linux 和 MySQL 的缓存
+
+### Linux
+
+在应用程序读取文件的数据的时候，Linux 操作系统是会对读取的文件数据进行缓存的，会缓存在文件系统中的 **Page Cache**（如下图中的页缓存）。
+
+![img](./../img/%E8%99%9A%E6%8B%9F%E6%96%87%E4%BB%B6%E7%B3%BB%E7%BB%9F.png)
+
+Page Cache 属于内存空间里的数据，由于内存访问比磁盘访问快很多，在下一次访问相同的数据就不需要通过磁盘 I/O 了，命中缓存就直接返回数据即可。
+
+因此，Page Cache 起到了加速访问数据的作用。
+
+### [#](https://xiaolincoding.com/os/3_memory/cache_lru.html#mysql-的缓存)MySQL 的缓存
+
+MySQL 的数据是存储在磁盘里的，为了提升数据库的读写性能，Innodb 存储引擎设计了一个**缓冲池**（Buffer Pool），Buffer Pool 属于内存空间里的数据。
+
+![img](./../img/%E7%BC%93%E5%86%B2%E6%B1%A0.drawio.png)
+
+有了缓冲池后：
+
+- 当读取数据时，如果数据存在于 Buffer Pool 中，客户端就会直接读取 Buffer Pool 中的数据，否则再去磁盘中读取。
+- 当修改数据时，首先是修改 Buffer Pool 中数据所在的页，然后将其页设置为脏页，最后由后台线程将脏页写入到磁盘。
