进程，线程，协程

--- a/八股/进程，线程，协程.md
+++ b/八股/进程，线程，协程.md
@@ -719,3 +719,38 @@ void Read() {
 ```
 
 添加了一个 flag，flag 的作用是，当一些读操作进入读队列后，来了一个写操作，此时将临界资源 flag 占用了，后面的读操作就不能进入读队列了
+
+# 锁
+
+## 互斥锁和自旋锁
+
+- **互斥锁**加锁失败后，线程会**释放 CPU** ，给其他线程；
+- **自旋锁**加锁失败后，线程会**忙等待**，直到它拿到锁；
+
+互斥锁加锁失败后会转到内核态调用其他线程，会有两次上下文交换，**如果你能确定被锁住的代码执行时间很短，就不应该用互斥锁，而应该选用自旋锁，否则使用互斥锁。**
+
+自旋锁是通过 CPU 提供的 `CAS` 函数（*Compare And Swap*），在「用户态」完成加锁和解锁操作，不会主动产生线程上下文切换，所以相比互斥锁来说，会快一些，开销也小一些。自旋锁将加锁步骤合并成一条原子指令，要么都执行，要么都不执行
+
+自旋锁是最比较简单的一种锁，一直自旋，利用 CPU 周期，直到锁可用。**需要注意，在单核 CPU 上，需要抢占式的调度器（即不断通过时钟中断一个线程，运行其他线程）。否则，自旋锁在单 CPU 上无法使用，因为一个自旋的线程永远不会放弃 CPU。**
+
+自旋锁开销少，在多核系统下一般不会主动产生线程切换，适合异步、协程等在用户态切换请求的编程方式，但如果被锁住的代码执行时间过长，自旋的线程会长时间占用 CPU 资源，所以自旋的时间和被锁住的代码执行的时间是成「正比」的关系，我们需要清楚的知道这一点。
+
+自旋锁与互斥锁使用层面比较相似，但实现层面上完全不同：**当加锁失败时，互斥锁用「线程切换」来应对，自旋锁则用「忙等待」来应对**。
+
+## 读写锁
+
+读写锁从字面意思我们也可以知道，它由「读锁」和「写锁」两部分构成，如果只读取共享资源用「读锁」加锁，如果要修改共享资源则用「写锁」加锁。
+
+所以，**读写锁适用于能明确区分读操作和写操作的场景**。**读写锁在读多写少的场景，能发挥出优势**。
+
+## 乐观锁与悲观锁
+
+前面提到的互斥锁、自旋锁、读写锁，都是属于悲观锁。
+
+悲观锁做事比较悲观，它认为**多线程同时修改共享资源的概率比较高，于是很容易出现冲突，所以访问共享资源前，先要上锁**。
+
+乐观锁做事比较乐观，它假定冲突的概率很低，它的工作方式是：**先修改完共享资源，再验证这段时间内有没有发生冲突，如果没有其他线程在修改资源，那么操作完成，如果发现有其他线程已经修改过这个资源，就放弃本次操作**。
+
+实际上，我们常见的 SVN 和 Git 也是用了乐观锁的思想，先让用户编辑代码，然后提交的时候，通过版本号来判断是否产生了冲突，发生了冲突的地方，需要我们自己修改后，再重新提交。
+
+乐观锁虽然去除了加锁解锁的操作，但是一旦发生冲突，重试的成本非常高，所以**只有在冲突概率非常低，且加锁成本非常高的场景时，才考虑使用乐观锁。**
