--- a/八股/文件系统.md
+++ b/八股/文件系统.md
@@ -197,7 +197,7 @@ Page Cache 包括 Page Cache 和 Buffer Cache，Direct I/O 不会进入到 Page 
 
 Swap Cache 也是 Page Cache 的一部分，当匿名页（Inactive(anon) 以及 Active(anon)）先被交换（swap out）到磁盘上后，然后再加载回（swap in）内存中，由于读入到内存后原来的 Swap File 还在，所以 SwapCached 也可以认为是 File-backed page，即属于 Page Cache。
 
-**age Cache 用于缓存文件的页数据，buffer cache 用于缓存块设备（如磁盘）的块数据。**
+**page Cache 用于缓存文件的页数据，buffer cache 用于缓存块设备（如磁盘）的块数据。**
 
 - 页是逻辑上的概念，因此 Page Cache 是与文件系统同级的；
 - 块是物理上的概念，因此 buffer cache 是与块设备驱动程序同级的。
